syntax = "proto3";

package main;

option go_package = "./proto";

// 添加岗位信息
message AddPostReq {
  int64 id = 1; //岗位id
  string post_code = 2; //岗位编码
  string post_name = 3; //岗位名称
  int32 sort = 4; //显示顺序
  int32 status = 5; //岗位状态（0：停用，1:正常）
  string remark = 6; //备注
  string create_by = 7; //创建者
}

message AddPostResp {
  string pong = 1;
}

// 删除岗位信息
message DeletePostReq {
  repeated int64 ids = 1;
}

message DeletePostResp {
  string pong = 1;
}

// 更新岗位信息
message UpdatePostReq {
  int64 id = 1; //岗位id
  string post_code = 2; //岗位编码
  string post_name = 3; //岗位名称
  int32 sort = 4; //显示顺序
  int32 status = 5; //岗位状态（0：停用，1:正常）
  string remark = 6; //备注
  string update_by = 9; //更新者
}

message UpdatePostResp {
  string pong = 1;
}

// 更新岗位信息状态
message UpdatePostStatusReq {
  repeated int64 ids = 1; //岗位id
  int32 status = 5; //岗位状态（0：停用，1:正常）
  string update_by = 9; //更新者
}

message UpdatePostStatusResp {
  string pong = 1;
}

// 查询岗位信息详情
message QueryPostDetailReq {
  int64 id = 1;
}

message QueryPostDetailResp {
  int64 id = 1; //岗位id
  string post_code = 2; //岗位编码
  string post_name = 3; //岗位名称
  int32 sort = 4; //显示顺序
  int32 status = 5; //岗位状态（0：停用，1:正常）
  string remark = 6; //备注
  string create_by = 7; //创建者
  string create_time = 8; //创建时间
  string update_by = 9; //更新者
  string update_time = 10; //更新时间

}

// 分页查询岗位信息列表
message QueryPostListReq {
  string post_code = 1; //岗位编码
  string post_name = 2; //岗位名称
  int32 status = 3; //岗位状态（0：停用，1:正常）
  int64 page_num = 4; //第几页
  int64 page_size = 5; //每页的数量
}

message PostListData {
  int64 id = 1; //岗位id
  string post_code = 2; //岗位编码
  string post_name = 3; //岗位名称
  int32 sort = 4; //显示顺序
  int32 status = 5; //岗位状态（0：停用，1:正常）
  string remark = 6; //备注
  string create_by = 7; //创建者
  string create_time = 8; //创建时间
  string update_by = 9; //更新者
  string update_time = 10; //更新时间

}

message QueryPostListResp {
  int64 total = 1;
  repeated  PostListData list = 2;
}

// 岗位信息
service PostService {
  // 添加岗位信息
  rpc AddPost(AddPostReq) returns (AddPostResp){}
  // 删除岗位信息
  rpc DeletePost(DeletePostReq) returns (DeletePostResp){}
  // 更新岗位信息
  rpc UpdatePost(UpdatePostReq) returns (UpdatePostResp ){}
  // 更新岗位信息状态
  rpc UpdatePostStatus(UpdatePostStatusReq) returns (UpdatePostStatusResp ){}
  // 查询岗位信息详情
  rpc QueryPostDetail(QueryPostDetailReq) returns (QueryPostDetailResp){}
  // 查询岗位信息列表
  rpc QueryPostList(QueryPostListReq) returns (QueryPostListResp){}


}
